# rag-search-engine

./: .gitignore  .mise.toml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: keyword_search_cli.py
cli/lib/: keyword_search.py  search_util.py
data/: stopwords.txt
dto/: movie.py
movie_search/: __init__.py  __main__.py  cli.py  settings.py
movie_search/application/: __init__.py  contracts.py  index_service.py  search_service.py
movie_search/domain/: __init__.py  exceptions.py  models.py  tokenization.py
movie_search/infra/: __init__.py  index_store.py  json_repository.py  stopwords_repository.py
movie_search/search/: __init__.py  bm25.py  inverted_index.py
tests/: test_bm25.py  test_index_service.py  test_index_store.py  test_inverted_index.py  test_keyword_search.py  test_keyword_search_cli.py  test_movie_dto.py  test_search_util.py  test_tokenization.py
