[project]
name = "simple-search-engine-using-rag"
version = "0.1.0"
description = "Production-grade movie keyword search CLI with BM25 and inverted index support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.4",
    "mypy>=1.18.1",
    "nltk==3.9.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]

[project.scripts]
movie-search = "movie_search.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["movie_search*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["movie_search"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.mypy]
python_version = "3.13"
files = ["movie_search"]
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_equality = true
ignore_missing_imports = true
